--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: ''
+      repo: '',
+      loadNavbar: true,
+      loadSidebar: true,
+      subMaxLevel: 2,
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
